style: fix carousel image on mobile

--- a/css/partials/theme/_carousels.scss
+++ b/css/partials/theme/_carousels.scss
@@ -38,15 +38,16 @@
 			overflow: hidden;
 
 			img {
+				border-radius: 0;
+				left: 50%;
+				margin: 0;
+				max-height: none;
+				max-width: 100%;
 				min-height: 100%;
 				min-width: 100%;
-				max-width: 100%;
-				max-height: none;
-				border-radius: 0;
+				object-fit: cover;
 				position: absolute;
-				margin: 0;
 				top: 50%;
-				left: 50%;
 				transform: translateX(-50%) translateY(-50%);
 			}
 		}
